--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,7 @@ form {
 }
 
 .synopsis {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(227,227,227,0.5);
   height: 400px;
   padding-top: 15%;
   padding-bottom: 15%;
@@ -48,5 +48,24 @@ form {
   font-size: 30px;
   height: 50px;
 }
+
+
+/*Leaderboard css*/
+.leaderboard-container {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+td, th {
+  border: solid 3px black;
+  padding: 5px;
+}
+
+
+p.header {
+  color: #8B0000;
+}
+
+
 
 
