--- a/app/views/movie_ideas/show.html.erb
+++ b/app/views/movie_ideas/show.html.erb
@@ -1,14 +1,14 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Synopsis:</strong>
-  <%= @movie_idea.synopsis %>
-</p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>More info:</strong>
-  <%= @movie_idea.more_info %>
-</p>
+  <p class="header"><strong>Synopsis</strong></p>
+  <p><%= @movie_idea.synopsis %></p>
 
-<%= link_to 'Edit', edit_movie_idea_path(@movie_idea) %> |
-<%= link_to 'Back', movie_ideas_path %>
+  <p class="header"><strong>More Information</strong></p>
+  <p><%= @movie_idea.more_info %></p>
+
+ <!--  <%= link_to 'Edit', edit_movie_idea_path(@movie_idea) %> | -->
+<!--   <%= link_to 'Back', movie_ideas_path %> -->
+
+</div>
