--- a/app/views/movie_ideas/show.html.erb
+++ b/app/views/movie_ideas/show.html.erb
@@ -3,12 +3,14 @@
   <p id="notice"><%= notice %></p>
 
   <p class="header"><strong>Synopsis</strong></p>
-  <p><%= @movie_idea.synopsis %></p>
+  <p class="details-synopsis"><%= @movie_idea.synopsis %></p>
 
   <p class="header"><strong>More Information</strong></p>
-  <p><%= @movie_idea.more_info %></p>
+  <p class="details-moreInfo"><%= @movie_idea.more_info %></p>
 
  <!--  <%= link_to 'Edit', edit_movie_idea_path(@movie_idea) %> | -->
-<!--   <%= link_to 'Back', movie_ideas_path %> -->
+
+  <form class="back-btn"><input type="button" value="Back" onClick="history.go(-1);return true;" id="back-btn"></form>
+
 
 </div>
