--- a/app/views/movie_ideas/new.html.erb
+++ b/app/views/movie_ideas/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-<h1>New movie_idea</h1>
+  <h1>Pitch your awesome movie idea</h1>
 
-  <%= render 'form' %>
+    <%= render 'form' %>
 
-  <%= link_to 'Back', movie_ideas_path %>
+    <%= link_to 'Back', movie_ideas_path %>
 </div>
