--- a/app/views/movie_ideas/new.html.erb
+++ b/app/views/movie_ideas/new.html.erb
@@ -3,5 +3,5 @@
 
     <%= render 'form' %>
 
-    <%= link_to 'Back', movie_ideas_path %>
+    <%= link_to 'See Top Ideas', movie_ideas_path %>
 </div>
