--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
   <div class="container">
 
     <div class="synopsis">
-      <p><%= @info.synopsis %></p>
+      <p>"synopsis goes here"</p>
     </div>
 
     <div class="judgment">
@@ -19,7 +19,7 @@
           <button type="button" class="btn btn-default" id="nay_btn">Nay</button>
         </div>
         <div class="btn-group">
-          <a href="/movie_ideas/<%= @info.id %>" class="btn btn-default" id="readMore_btn">Read More</a>
+          <a href="/movie_ideas/" class="btn btn-default" id="readMore_btn">Read More</a>
         </div>
         <div class="btn-group">
           <button type="button" class="btn btn-default" id="yay_btn">Yay</button>
