--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,6 +31,6 @@
 <% if user_signed_in? %>
   <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
 <% end %>
-
-<p>Number of Likes:<%= @info.get_likes.size %></p>
-<p>Number of Dislikes:<%= @info.get_dislikes.size %></p>
+<!--
+<p>Likes: <%= @info.get_likes.size %></p>
+<p>Dislikes: <%= @info.get_dislikes.size %></p> -->
