--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,22 +7,14 @@
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 
 
-  <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' %>
-
-
-  <%= javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-
-
   <%= csrf_meta_tags %>
 
   <meta charset="utf-8">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
+
 
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
@@ -40,29 +32,16 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/leaderboard">Leaderboard</a></li>
-        <li><a href="/movie_ideas/new">I Have A Better Idea</a></li>
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <form role="form">
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-              </div>
-              <div class="form-group">
-              <button type="submit" class="btn btn-default" id="logIn">Log In</button>
-              <button type="submit" class="btn btn-default" id="signUp">Sign Up</button>
-
-              </div>
-            </form>
-          </ul>
-        </li>
+      <li><a href="/leaderboard">Leaderboard</a></li>
+      <li><a href="/movie_ideas/new">I Have A Better Idea</a></li>
+       <% if user_signed_in? %>
+          <li><a>Logged in as <strong><%= current_user.email %></strong></a></li>
+          <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+        <% else %>
+          <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
+          <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -71,7 +50,12 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
+
 <%= yield %>
 
+  <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' %>
+
+  <%= javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
