--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,7 @@
       <li><a href="/leaderboard">Leaderboard</a></li>
       <li><a href="/movie_ideas/new">I Have A Better Idea</a></li>
        <% if user_signed_in? %>
-          <li><a>Logged in as <strong><%= current_user.email %></strong></a></li>
-          <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+          <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
