--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,4 @@
-<%= current_user.email %>
+<div class="container">
+  <%= current_user.email %>
+  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+</div>
