--- a/app/views/devise/registrations/profile.html.erb
+++ b/app/views/devise/registrations/profile.html.erb
@@ -1,4 +1,8 @@
 <div class="container">
-  <%= current_user.email %>
+
+  <%= image_tag current_user.profile_pic %>
+  <%= @user.email %>
+  <%= @user.first_name %>
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+
 </div>
