--- a/app/views/movie_ideas/show.html.erb
+++ b/app/views/movie_ideas/show.html.erb
@@ -11,7 +11,11 @@
 
  <!--  <%= link_to 'Edit', edit_movie_idea_path(@movie_idea) %> | -->
 
-  <form class="back-btn"><input type="button" value="Back" onClick="history.go(-1);return true;" id="back-btn"></form>
 
+
+  <form action="/" method="get">
+    <input name="id" value="<%= @movie_idea.id %>" type="hidden">
+    <button type="submit" class="btn btn-default" id="yay_btn">Back</button>
+  </form>
 
 </div>
