--- a/app/views/movie_ideas/edit.html.erb
+++ b/app/views/movie_ideas/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing movie_idea</h1>
+<div class="container">
+
+<h1>Edit</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @movie_idea %> |
 <%= link_to 'Back', movie_ideas_path %>
+
+</div>
