--- a/app/views/movie_ideas/_form.html.erb
+++ b/app/views/movie_ideas/_form.html.erb
@@ -14,12 +14,12 @@
 
 
   <div class="synopsis-field">
-    <%= f.label :synopsis %><br>
+    Synopsis<br>
     <%= f.text_area :synopsis, {rows: "4", cols: "50", maxlength: "150"} %>
-    <div id="textarea_feedback"></div>
+    <div id="textarea_feedback"></div><br>
   </div>
   <div class="moreInfo-field">
-    <% f.label :more_info %><br>
+    Write more about it here:<br>
     <%= f.text_area :more_info, {rows: "8", cols: "50", maxlength: "150"} %>
   </div>
   <div class="user-field">
