--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<p>Edit <%= resource_name.to_s.humanize %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :patch }) do |f| %>
   <%= devise_error_messages! %>
+
+
+  <div class="edit-user col-md-4">
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
@@ -11,14 +14,20 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
+  <br>
   <div><%= f.label :first_name %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.text_field :first_name, autocomplete: "off" %></div>
 
+  <br>
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
+  <br>
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+
+  </div>
+  <div class="edit-user col-md-4">
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div>
@@ -27,14 +36,16 @@
     <%= f.file_field :profile_pic, html: {multipart: true}  %></div>
 
   <div><%= f.submit "Update" %></div>
+
+  </div>
 <% end %>
 
+  <div class="edit-user col-md-4">
 
+    <h3>Cancel my account</h3>
 
-<h3>Cancel my account</h3>
+    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
-
+    <%= link_to "Back", :back %>
+  </div>
 </div>
