added more links in read-more page and started populating movie ideas

--- a/app/views/movie_ideas/new.html.erb
+++ b/app/views/movie_ideas/new.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-  <h1>Pitch your awesome movie idea</h1>
+  <p>Pitch your awesome movie idea<p>
 
     <%= render 'form' %>
-
-    <%= link_to 'See Top Ideas', movie_ideas_path %>
 </div>
