--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,13 +4,8 @@
 
 
 @font-face {
-  font-family: "Brown Fox";
+  font-family: "Bebas";
   src: url("/BebasNeue-webfont.ttf") format('truetype');
-}
-
-@font-face {
-  font-family: "Bitter";
-  src: url("/Blackout-Midnight.ttf") format('truetype');
 }
 
 body {
@@ -19,7 +14,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: "Brown Fox";
+  font-family: "Bebas";
 
 }
 
@@ -70,18 +65,19 @@ div.form-group {
   height: 50px;
 }
 
+
 .user_info {
-  text-align: left;
+  text-align: right;
 }
 
 .profile_ideas {
   text-align: left;
+
 }
 
 
 /*Leaderboard css*/
 .leaderboard-container {
-
   margin-left: 5%;
   margin-right: 5%;
   font-size: 25px;
@@ -104,6 +100,12 @@ p.header {
 
 
 /*Pitch your idea css*/
+.pitch-container {
+  width: 1000px;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+
 #movie_idea_synopsis {
   background-color: rgba(227,227,227,0.5);
   width: 500px;
@@ -125,6 +127,13 @@ p.details-synopsis {
 
 p.details-moreInfo {
   font-size: 30px;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+  max-height: 350px;
+  max-width: 250px;
 }
 
 form.back-btn {
