--- a/app/views/movie_ideas/edit.html.erb
+++ b/app/views/movie_ideas/edit.html.erb
@@ -3,8 +3,8 @@
 <h1>Edit</h1>
 
 <%= render 'form' %>
-
+<!--
 <%= link_to 'Show', @movie_idea %> |
-<%= link_to 'Back', movie_ideas_path %>
+<%= link_to 'Back', movie_ideas_path %> -->
 
 </div>
