--- a/app/views/movie_ideas/show.html.erb
+++ b/app/views/movie_ideas/show.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <p class="header"><strong>Created by</strong></p>
-  <p><a href="/users/<%= @movie_idea.user_id %>">Author</a></p>
+  <p><a href="/users/<%= @movie_idea.user_id %>">Creator Profile</a></p>
 
   <p class="header"><strong>Synopsis</strong></p>
   <p class="details-synopsis"><%= @movie_idea.synopsis %></p>
