--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
-
 <div class="container">
 
   <div class="synopsis">
-    <p><%= @info.synopsis %></p>
+    <p id="info-synopsis"><%= @info.synopsis %></p>
   </div>
 
   <div class="judgment">
