--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <img src="/assets/moth.jpg" id="moth">
       <a class="navbar-brand" href="/">Synopsia</a>
     </div>
 
