added votes on movie read more page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,6 +46,12 @@ img#moth {
   width: 20%;
 }
 
+img#scimoth {
+  right: 0px;
+  bottom: 0px;
+
+}
+
 .container {
   width: 1000px;
   margin-top: 5%;
