--- a/app/views/movie_ideas/show.html.erb
+++ b/app/views/movie_ideas/show.html.erb
@@ -1,16 +1,6 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
-
-  <p><a href="/users/<%= @movie_idea.user_id %>">Creator Profile</a></p>
-
-  <p class="header"><strong>Synopsis</strong></p>
-  <p class="details-synopsis"><%= @movie_idea.synopsis %></p>
-
-  <p class="header"><strong>More Information</strong></p>
-  <p class="details-moreInfo"><%= @movie_idea.more_info %></p>
-
-
   <div class="btn-group">
+    <a href="/users/<%= @movie_idea.user_id %>" class="btn btn-default" id="yay_btn">Creator Profile</a>
 
     <% if user_signed_in? and current_user.id == @movie_idea.user_id %>
       <a href="/movie_ideas/<%= @movie_idea.id %>/edit" class="btn btn-default" id="yay_btn">Edit</a>
@@ -21,8 +11,23 @@
       <input name="id" value="<%= @movie_idea.id %>" type="hidden">
       <button type="submit" class="btn btn-default" id="yay_btn">Back</button>
     </form>
-
-
   </div>
+
+  <p id="notice"><%= notice %></p>
+  <div class="col-md-2">
+    <p class="header"><strong>Yays</strong></p>
+    <p><%= @movie_idea.get_likes.size %>
+    <p class="header"><strong>Nays</strong></p>
+    <p><%= @movie_idea.get_dislikes.size %>
+  </div>
+  <div class="col-md-10">
+    <p class="header"><strong>Synopsis</strong></p>
+    <p class="details-synopsis"><%= @movie_idea.synopsis %></p>
+
+    <p class="header"><strong>More Information</strong></p>
+    <p class="details-moreInfo"><%= @movie_idea.more_info %></p>
+  </div>
+
+
 
 </div>
