--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,36 +1,51 @@
-<div class="container">
+<center>
+<div class="card-top-container">
+  <div class="card-container">
+    <div class="card">
 
-  <div class="synopsis">
-    <p id="info-synopsis"><%= @info.synopsis %></p>
-  </div>
-
-  <div class="judgment">
-    <div class="btn-group btn-group-justified">
-
-      <div class="btn-group">
-        <form action="/movie_ideas/<%= @info.id %>/dislike" method="post">
-          <button type="submit" class="btn btn-default" id="nay_btn">Nay</button>
-        </form>
+      <div class="front">
+        <div class="synopsis">
+          <p><%= @info.synopsis %></p>
+        </div>
       </div>
 
-      <div class="btn-group">
-        <a href="/movie_ideas/<%= @info.id %>" class="btn btn-default" id="readMore_btn">Read More</a>
-      </div>
+      <div class="back">
+        <div class="synopsis">
+          <p><%= @info.more_info %></p>
 
-      <div class="btn-group">
-        <form action="/" method="get">
-          <button type="submit" class="btn btn-default" id="skip_btn">Skip</button>
-        </form>
-      </div>
+        </div>
+          <div>
+            <div class="btn-group btn-group-justified">
 
-      <div class="btn-group">
-        <form action="/movie_ideas/<%= @info.id %>/like" method="post">
-          <button type="submit" class="btn btn-default" id="yay_btn">Yay</button>
-        </form>
-      </div>
+              <div class="btn-group">
+                <form action="/movie_ideas/<%= @info.id %>/dislike" method="post">
+                  <button class="btn btn-default"><i type="submit" class="fa fa-thumbs-o-down fa-2x"></i></button>
+                </form>
+              </div>
 
+              <div class="btn-group">
+                <form action="/movie_ideas/<%= @info.id %>">
+                  <button class="btn btn-default"><i class="fa fa-info fa-2x"></i></button>
+                </form>
+              </div>
+
+
+              <div class="btn-group">
+                <form action="/" method="get">
+                  <button class="btn btn-default"><i type="submit" class="fa fa-refresh fa-2x"></i></button>
+                </form>
+              </div>
+
+              <div class="btn-group">
+                <form action="/movie_ideas/<%= @info.id %>/like" method="post">
+                  <button class="btn btn-default"><i type="submit" class="fa fa-thumbs-o-up fa-2x"></i></button>
+                </form>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
   </div>
-
-
 </div>
+</center>
+
