added type effect

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
 <center>
+
+<h1 class="css-typing">Ideas for our entertainment</h1>
+
 <div class="card-top-container">
   <div class="card-container">
     <div class="card">
@@ -48,4 +51,3 @@
   </div>
 </div>
 </center>
-
