--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,6 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <img src="http://lizzieharper.co.uk/Blog%20images/pencil%20moth.jpg" id="moth">
       <a class="navbar-brand" href="/">Synopsia</a>
     </div>
@@ -38,7 +32,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
       <li><a href="/leaderboard">Leaderboard</a></li>
-      <li><a href="/movie_ideas/new">I Have A Better Idea</a></li>
+      <li><a href="/movie_ideas/new">Pitch My Idea</a></li>
        <% if user_signed_in? %>
           <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
@@ -50,6 +44,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+
 
 <p id="notice"><%= notice %></p>
 
@@ -72,6 +69,7 @@
       (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
   }());
   </script>
+
 
 </body>
 </html>
