--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,22 +1,26 @@
-<div class="container">
-<h2>Sign up</h2>
+<div class="login-container">
+  <div id="login-form">
+    <h3>Sign up</h3>
+    <fieldset>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+        <div><%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+        <div><%= f.label :password %> <% if @validatable %><i style="font-size:12px">(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+          <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        <div><%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <div><%= f.submit "Sign up" %></div>
 
-<%= render "devise/shared/links" %>
+      <% end %>
 
+    <%= render "devise/shared/links" %>
+    </fieldset>
+  </div>
 </div>
