--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,35 +20,39 @@
 <body>
 
 
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <img src="http://lizzieharper.co.uk/Blog%20images/pencil%20moth.jpg" id="moth">
-      <a class="navbar-brand" href="/">Synopsia</a>
-    </div>
+<nav class="navbar" role="navigation">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-      <li><a href="/leaderboard">Leaderboard</a></li>
-      <li><a href="/movie_ideas/new">Pitch My Idea</a></li>
-       <% if user_signed_in? %>
-          <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
-          <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
-        <% else %>
-          <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
-          <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  <img style="width:100px" src="http://i.imgur.com/VngAUJl.gif"/>
+  <div class="nav navbar-header">
+    <a class="navbar-brand" href="/">Synopsia</a>
+  </div>
+
+
+  <ul class="nav navbar-nav navbar-right">
+  <li><a href="/leaderboard" class="navbar-link">Leaderboard</a></li>
+  <li><a href="/movie_ideas/new" class="navbar-link">Pitch My Idea</a></li>
+   <% if user_signed_in? %>
+      <li><a href="/users/<%= current_user.id %>" class="navbar-link">My Profile</a></li>
+      <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+    <% else %>
+      <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
+      <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+    <% end %>
+  </ul>
 </nav>
 
 
 
 
-<p id="notice"><%= notice %></p>
+<div class="container"><p id="notice"><%= notice %></p></div>
 
 
 <%= yield %>
