--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,13 +7,13 @@
         <%= devise_error_messages! %>
 
         <div><%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true %></div>
+        <%= f.email_field :email, autofocus: true, :class => "input-form" %></div>
 
         <div><%= f.label :password %> <% if @validatable %><i style="font-size:12px">(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-          <%= f.password_field :password, autocomplete: "off" %></div>
+          <%= f.password_field :password, autocomplete: "off", :class => "input-form" %></div>
 
         <div><%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+          <%= f.password_field :password_confirmation, autocomplete: "off", :class => "input-form" %></div>
 
 
         <div><%= f.submit "Sign up" %></div>
