--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
 <center>
 
-<h1 class="css-typing">Ideas for our entertainment</h1>
-
+<h3 class="css-typing">Welcome to the Archive of Our Entertainment</h3>
 <div class="card-top-container">
   <div class="card-container">
     <div class="card">
@@ -50,4 +49,6 @@
     </div>
   </div>
 </div>
+
+
 </center>
