--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,11 @@
 
 <nav class="navbar" role="navigation">
 
-  <img style="width:100px" src="http://i.imgur.com/VngAUJl.gif"/>
   <div class="nav navbar-header">
     <a class="navbar-brand" href="/">Synopsia</a>
   </div>
+
+  <a href="/"><img style="width:100px" src="http://i.imgur.com/VngAUJl.gif"/></a>
 
 
   <ul class="nav navbar-nav navbar-right">
