--- a/app/views/movie_ideas/_form.html.erb
+++ b/app/views/movie_ideas/_form.html.erb
@@ -17,13 +17,13 @@
     <div class="synopsis-field">
       <div id="login-form"><h3 style="width:500px">Synopsis</h3>
         <%= f.text_area :synopsis, {rows: "4", cols: "80", maxlength: "200"} %>
-      <div class="countdown"></div><br>
+      <span id="chars">200</span> characters remaining<br>
     </div>
 
 
     <div class="moreInfo-field">
       <div id="login-form"><h3 style="width:500px">Write more about it here:</h3></div>
-      <%= f.text_area :more_info, {rows: "8", cols: "80", maxlength: "200"} %>
+      <%= f.text_area :more_info, {rows: "8", cols: "80"} %>
     </div>
 
 
