form edits and styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,7 +59,7 @@ div.form-group {
 }
 
 .navbar-link:hover{
-  color: #008080;
+  color: #1A5A76;
 }
 
 img#moth {
@@ -108,7 +108,7 @@ img#scimoth {
 }
 
 td, th {
-  border: solid 3px black;
+  border: solid 1px black;
   padding: 5px;
 }
 
@@ -138,13 +138,13 @@ p.header {
 
 #movie_idea_synopsis {
   background-color: rgba(227,227,227,0.5);
-  width: 500px;
+  width: 700px;
 
 }
 
 #movie_idea_more_info {
   background-color: rgba(227,227,227,0.5);
-  width: 500px;
+  width: 700px;
 
 }
 
