--- a/app/views/movie_ideas/index.html.erb
+++ b/app/views/movie_ideas/index.html.erb
@@ -2,13 +2,12 @@
 
 <h1>Leaderboard</h1>
 
-  <table id="leaderboard">
+  <table class="row-border" id="leaderboard">
     <thead>
       <tr>
-        <th>Yay</th>
-        <th>Nay</th>
+        <th><i type="submit" class="fa fa-thumbs-o-up fa-2x"></i></th>
+        <th><i type="submit" class="fa fa-thumbs-o-down fa-2x"></i></th>
         <th>Synopsis</th>
-
 
       </tr>
     </thead>
