--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <center>
 
-<h3 class="css-typing">Welcome to the Archive of Our Entertainment</h3>
+<h3 class="css-typing">this is an archive of our entertainment</h3>
 <div class="card-top-container">
   <div class="card-container">
     <div class="card">
