about page added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
 
   <ul class="nav navbar-nav navbar-right">
-  <li><a href="/reels" class="navbar-link">Reels</a></li>
+  <li><a href="/about" class="navbar-link">About</a></li>
   <li><a href="/leaderboard" class="navbar-link">Leaderboard</a></li>
   <li><a href="/movie_ideas/new" class="navbar-link">Pitch My Idea</a></li>
    <% if user_signed_in? %>
