--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -9,12 +9,7 @@
   <div class="container">
     <p>
 
-    Great stories are once sparks of inspiration.
-    Synopsia is an archive that'll nudge you when you need the extra push.
-    This site was initially built with a movie theme in mind. But whatever!
-    If you need an inspiration for your story, be them novels or comic books, I hope you find
-    something here. The name Synopsia is a shadow of the word "synopsis" and soon later I found out that it is also a name of a moth genus, Geometridae.
-    So, yeah. Follow the moth when you want to go back to browsing. Click it, it'll bite.
+    Great stories are once sparks of inspiration. Synopsia is an archive that'll nudge you when you need the extra push. This site was initially built with a movie theme in mind. But whatever! If you need an inspiration for your story, be them novels or comic books, I hope you find something here. The name Synopsia is a shadow of the word "synopsis", which I soon later found out that it is also a name of a moth genus. So, yeah. Follow the moth when you want to go back to browsing. Click it, it'll bite.
 
     </p>
   </div>
@@ -30,11 +25,7 @@
   <div class="container">
     <p>
 
-    Feeling inspired? Good! As you've noticed, I built the reels so that you can read it one by one.
-    When you have so many ideas thrown at you, it can be overwhelming, but for the most part, just plain annoying. Have an idea of your own? Brilliant!
-    Sign up, pitch your idea, and see what others think.
-    (Recognize the pictures? They're from a movie called Hugo.
-    It was 3D. Of course there's nothing wrong with that.)
+    Feeling inspired? Good! As you've noticed, I built the reels so that you can read it one by one. When you have so many ideas thrown at you, it can be overwhelming, but for the most part, just plain annoying. Have an idea of your own? Brilliant! Sign up, pitch your idea, and see what others think. Or build an automaton to do that for you. (Recognize the pictures? They're from a movie called Hugo. It was 3D. Of course there's nothing wrong with that. They make for nice wallpapers. No but genuinely, you should watch it if you haven't seen it yet.)
 
     </p>
   </div>
@@ -51,13 +42,7 @@
 
     <p>
 
-    The entertainment industry is changing. (This thing called the Internet. Gasp.)
-    The line between creator and audience is becoming less stringent.
-    Some creators cared less what the audience wanted and we were grateful for that.
-    Some industries run on the assumption that they know what we want. Sometimes we have no idea what we want. Sometimes we know exactly what we want.
-    Synopsia is just another way we can talk about what we might, just might, like.
-
-
+    The entertainment industry is changing. (This thing called the Internet. Gasp.) The line between creator and audience is becoming less stringent. Some creators cared less what the audience wanted and we were grateful for that. Some industries run on the assumption that they know what we want. Sometimes we have no idea what we want. Sometimes we know exactly what we want. Synopsia is just another way we can talk about what we might, just might, like.
 
     </p>
   </div>
